[package]
name = "libunrealpak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base64 = "0.21.0"
byteorder = "1.4.3"
env_logger = "0.10.0"
flate2 = { version = "1.0.25", features = ["zlib"] }
log = "0.4.17"
sha1 = "0.10.5"
thiserror = "1.0.38"
walkdir = "2.3.2"
